# synthetic-data-generator

./: .gitignore  README.md  pyproject.toml
agentic_synth/: __init__.py  cli.py
agentic_synth/core/: __init__.py  cache.py  config.py  generator.py
agentic_synth/generators/: __init__.py  base.py  embeddings.py  events.py  structured.py  time_series.py
agentic_synth/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py  openrouter.py
examples/: basic_usage.py  event_generation.py  multi_provider.py  rag_embeddings.py  streaming_example.py  time_series_example.py
tests/: __init__.py  test_cache.py  test_config.py  test_generator.py  test_generators.py  test_providers.py
