[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-synth"
version = "0.1.0"
description = "AI-powered synthetic data generation for ML training, RAG systems, and testing workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Synthetic Data Generator", email = "dev@example.com" }
]
keywords = [
    "synthetic-data",
    "ai",
    "ml",
    "machine-learning",
    "data-generation",
    "rag",
    "embeddings",
    "time-series",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.scripts]
agentic-synth = "agentic_synth.cli:main"

[project.urls]
Homepage = "https://github.com/synthetic-data-generator/agentic-synth"
Documentation = "https://github.com/synthetic-data-generator/agentic-synth#readme"
Repository = "https://github.com/synthetic-data-generator/agentic-synth"
Issues = "https://github.com/synthetic-data-generator/agentic-synth/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentic_synth"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py310"]
